<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/day"
                    android:textColor="@color/colorSunday"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/exact_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/day"
                    android:text="@string/date"
                    android:textColor="@color/colorSunday"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/temperature_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_layout"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/weather_drizzle_night" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/temperature"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="64dp" />

                    <TextView
                        android:id="@+id/temp_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/temp"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@id/temp"
                        android:text="@string/temp_unit"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/temp"
                        android:layout_below="@id/temp"
                        android:text="@string/feels_like"
                        android:textColor="@color/colorTextGray"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temperature_layout"
                android:text="@string/location"
                android:textColor="@color/colorTextGray"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location"
                android:layout_marginBottom="5dp"
                android:text="@string/weather_description"
                android:textColor="@color/colorTextGray"
                android:textSize="14dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSunday"
            android:orientation="horizontal"
            android:layout_below="@id/info_layout"
            android:padding="40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/symbol_rain"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/symbol_rain" />

                <TextView
                    android:id="@+id/chance_of_rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chance_of_rain"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/symbol_humidity"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/symbol_humidity" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/humidity"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/symbol_wind"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/symbol_wind"
                    android:layout_gravity="center" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wind_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/wind_speed"
                        android:layout_gravity="bottom"
                        android:layout_toRightOf="@id/wind_speed"
                        android:paddingBottom="2dp"
                        android:text="@string/wind_unit"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>